--- a/index.html
+++ b/index.html
@@ -1,15 +1,114 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SKILLS</title>
     <link href="logo1.webp" rel="icon">
     <link rel="stylesheet" href="style.css">
-    
+    <!---b00tstrap css link-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
 
 </head>
+
 <body>
-    
+
+
+
+
+    <!----back ground animation-->
+    <div class="background">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+    </div>
+    <!----nav bar -->
+    <nav class="menu-container">
+        <!-- burger menu -->
+        <input type="checkbox" aria-label="Toggle menu" />
+
+
+        <!-- menu items -->
+        <div class="menu">
+            <ul>
+                <li>
+                    <a href="#home">
+                        Home
+                    </a>
+                </li>
+                <li>
+                    <a href="#Technical skills">
+                        TechnicalSkills
+                    </a>
+                </li>
+                <li>
+                    <a href="#Programming languages:">
+                        ProgrammingLanguages
+                    </a>
+                </li>
+                <li>
+                    <a href="#Tools & Platforms:">
+                        DevTools
+                    </a>
+                </li>
+                <li>
+                    <a href="#Soft Skills & Extras:">
+                        SoftSkills
+                    </a>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <a href="https://logeshkumar-2004.github.io/protfolio-website/">
+                        PortfolioWebsite
+                    </a>
+                </li>
+                <li>
+                    <a href="https://logeshkumar-2004.github.io/projects/">
+                        Projects
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+
+
+
+    <!----welcome-->
+
+
+    <div class="overlay-text">
+        <h1>Welcome to My Skill-Website</h1>
+        <p>I'm Logeshkumar Front-End Developer</p>
+
+
+
+    </div>
+    <!---bootstrap script-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
